--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.14",
-        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.3.13",
@@ -19,5 +19,8 @@
         "tailwindcss": "^3.4.0",
         "vite": "^6.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "@vuepic/vue-datepicker": "^11.0.1"
     }
 }
